feat(home): add hero section

--- a/src/index.css
+++ b/src/index.css
@@ -12,8 +12,8 @@
     --card-foreground: 222.2 84% 4.9%;
     --popover: 0 0% 100%;
     --popover-foreground: 222.2 84% 4.9%;
-    --primary: 222.2 47.4% 11.2%;
-    --primary-foreground: 210 40% 98%;
+    --primary: 216 100% 50%;
+    --primary-foreground: 0 0% 100%;
     --secondary: 210 40% 96.1%;
     --secondary-foreground: 222.2 47.4% 11.2%;
     --muted: 210 40% 96.1%;
@@ -71,12 +71,16 @@
   }
 
   body {
-    @apply bg-background text-foreground;
+    @apply bg-background leading-normal text-foreground;
   }
 }
 
 @layer components {
   .container {
     @apply mx-auto w-full px-4 md:px-6 lg:px-8 xl:max-w-screen-xl;
+  }
+
+  .section-title {
+    @apply text-xl font-black text-primary;
   }
 }
